[Draft] exo: Keep frame sink holder alive untill all resource are returned.

Bug: 765763
Change-Id: Ide425d8b14e13127bb65f893a2b9680e205cb2b8